--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -14,7 +14,11 @@
     </div>
   {% endif %}
   {% if h.is_enabled_utilizations() %}
-  <div class = "bubble">
+    <div class="bubble">
+      <i class="fa fa-pencil-square-o"></i><a href="{{ h.url_for('utilization.search', id=res.id, disable_keyword=true) }}">{{ h.get_resource_utilizations(res.id) }}</a>
+      <div class="description">{{ _('Utilizations') }}</div>
+    </div>
+    <div class="bubble">
       <img id="issue-resolution" src="/images/issue_resolution_badge.png">
       {{ h.get_resource_issue_resolutions(res.id) }}
       <div class="description">{{ _('Issue Resolutions') }}</div>
