--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -1,106 +1,42 @@
-{#
-Displays a single of dataset.
+{% ckan_extends %}
 
-package        - A package to display.
-item_class     - The class name to use on the list item.
-hide_resources - If true hides the resources (default: false).
-banner         - If true displays a popular banner (default: false).
-truncate       - The length to trucate the description to (default: 180)
-truncate_title - The length to truncate the title to (default: 80).
-
-Example:
-
-  {% snippet 'snippets/package_item.html', package=c.datasets[0] %}
-
-#}
-{% set truncate = truncate or 180 %}
-{% set truncate_title = truncate_title or 80 %}
-{% set title = package.title or package.name %}
-{% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
-
-{% block styles %}
+{% block resources_inner %}
   {% asset 'feedback/feedback-package-item-css' %}
-{% endblock %}
-{% block package_item %}
-  <li class="{{ item_class or "dataset-item" }}">
-    {% block content %}
-      <div class="dataset-content">
-        {% block heading %}
-          <h2 class="dataset-heading">
-            {% block heading_private %}
-              {% if package.private %}
-                <span class="dataset-private label label-inverse">
-                    <i class="fa fa-lock"></i>
-                    {{ _('Private') }}
-                </span>
-              {% endif %}
-            {% endblock %}
-            {% block heading_title %}
-		{{ h.link_to(h.truncate(title, truncate_title), h.url_for('%s.read' % package.type, id=package.name)) }}
-            {% endblock %}
-            {% block heading_meta %}
-              {% if package.get('state', '').startswith('draft') %}
-                <span class="label label-info">{{ _('Draft') }}</span>
-              {% elif package.get('state', '').startswith('deleted') %}
-                <span class="label label-danger">{{ _('Deleted') }}</span>
-              {% endif %}
-              {{ h.popular('recent views', package.tracking_summary.recent, min=10) if package.tracking_summary }}
-            {% endblock %}
-          </h2>
-        {% endblock %}
-        {% block banner %}
-          {% if banner %}
-            <span class="banner">{{ _('Popular') }}</span>
-          {% endif %}
-        {% endblock %}
-        {% block notes %}
-          {% if notes %}
-            <div>{{ notes|urlize }}</div>
-          {% else %}
-            <p class="empty">{{ _("This dataset has no description") }}</p>
-          {% endif %}
-        {% endblock %}
+  {% asset 'feedback/feedback-tooltip-css' %}
+  <li>
+    {% for resource in h.dict_list_reduce(package.resources, 'format') %}
+      <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
+    {% endfor %}
+    {% if h.is_enabled_downloads() %}
+      <div class = "bubble">
+        <i class="fa fa-arrow-circle-o-down"></i>
+        {{ h.get_package_downloads(package.id) }}
+        <div class="description">{{ _('Downloads') }}</div>
       </div>
-      {% block resources %}
-        {% if package.resources and not hide_resources %}
-          {% block resources_outer %}
-            <ul class="dataset-resources list-unstyled">
-              {% block resources_inner %}
-                {% asset 'feedback/feedback-tooltip-css' %}
-                <li>
-                  {% for resource in h.dict_list_reduce(package.resources, 'format') %}
-                    <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
-                  {% endfor %}
-                  <div class="utilization-data">
-                    <p>利活用数：<a href="{{ h.url_for('utilization.search', id=package.id, disable_keyword=true) }}">数字</a></p>
-                    <p>評価：
-                      <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
-                      <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
-                      <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
-                      <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
-                      <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
-                    </p>
-                  </div>
-                  {% if h.is_enabled_downloads() %}
-                    <div class = "bubble">
-                      <i class="fa fa-arrow-circle-o-down"></i>
-                      {{ h.get_package_downloads(package.id) }}
-                      <div class="description">{{ _('Downloads') }}</div>
-                    </div>
-                  {% endif %}
-                  {% if h.is_enabled_utilizations() %}
-                    <div class="bubble">
-                      <img id="issue-resolution" src="/images/issue_resolution_badge.png">
-                      {{ h.get_package_issue_resolutions(package.id) }}
-                      <div class="description">{{ _('Issue Resolutions') }}</div>
-                    </div>
-                  {% endif %}
-                </li>
-              {% endblock %}
-            </ul>
-          {% endblock %}
-        {% endif %}
-      {% endblock %}
-    {% endblock %}
+    {% endif %}
   </li>
+  <li>
+    {% if h.is_enabled_utilizations() %}
+      <div class="utilization-data bubble">
+        <i class="fa fa-pencil-square-o"></i><a href="{{ h.url_for('utilization.search', id=package.id, disable_keyword=true) }}">{{ h.get_package_utilizations(package.id) }}</a>
+        <div class="description">{{ _('Utilizations') }}</div>
+      </div>
+    {% endif %}
+  </li>
+  <li>
+    {% if h.is_enabled_utilizations() %}
+      <div class="bubble">
+        <img id="issue-resolution" src="/images/issue_resolution_badge.png">
+        {{ h.get_package_issue_resolutions(package.id) }}
+        <div class="description">{{ _('Issue Resolutions') }}</div>
+      </div>
+    {% endif %}
+  </li>
+  <p>評価：
+    <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
+    <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
+    <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
+    <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
+    <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
+  </p>
 {% endblock %}
