Add process of form

--- a/ckanext/feedback/assets/css/comments.css
+++ b/ckanext/feedback/assets/css/comments.css
@@ -91,7 +91,7 @@ td, th {
 .tab-menu:hover {
   opacity: 0.75;
 }
-input[name="tab_menu"] {
+input[name="tab-menu"] {
   display: none;
 }
 .tab-contents {
