--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -98,16 +98,16 @@
                 {% endif %}
               </div>
               {% if c.userobj.sysadmin %}
-                <form method="post">
+                <form id="comments-form" method="post">
                   <div class="tab">
-                    <input id="menu1" type="radio" name="tab_menu" checked><label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
-                    <input id="menu2" type="radio" name="tab_menu"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
+                    <input id="menu1" type="radio" name="tab-menu" value="utilization-comments" checked><label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
+                    <input id="menu2" type="radio" name="tab-menu" value="resource-comments"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
                     <div class="tab-contents" id="menu1">
                       {% block result_utilization_comments_table %}
                         <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} {{ utilization_comments|length }}</h4>
                         <span class="bottom-centered-content right-text">
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/a/')">{{ _('Bulk Appproval')}}</button>
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/a/')">{{ _('Bulk Delete')}}</button>
+                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comment')">{{ _('Bulk Appproval')}}</button>
+                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comment')">{{ _('Bulk Delete')}}</button>
                         </span>
                         <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
                           <thead class="table-header">
@@ -130,7 +130,7 @@
                             {% for row in utilization_comments %}
                               <tr>
                                 <td class="small-column">
-                                  <input type="checkbox" id="comments-checkbox-{{ utilization_comments.id }}" name="comments-checkbox" />
+                                  <input type="checkbox" id="utilization-comments-checkbox-{{ row.id }}" name="utilization-comments-checkbox-{{ row.id }}" />
                                 </td>
                                 <td class="left-aligned-text">
                                   <a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.content }}</a>
