--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -87,14 +87,14 @@
                       {% block result_utilization_comments_table %}
                         <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} {{ utilization_comments|length }}</h4>
                         <span class="bottom-centered-content right-text">
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comment')">{{ _('Bulk Appproval')}}</button>
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comment')">{{ _('Bulk Delete')}}</button>
+                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comments')">{{ _('Bulk Appproval')}}</button>
+                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comments')">{{ _('Bulk Delete')}}</button>
                         </span>
-                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
+                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="utilization-comments-table">
                           <thead class="table-header">
                             <tr>
                               <th class="small-column">
-                                <input type="checkbox" id="comments-checkbox-all" name="comments-checkbox-all" />
+                                <input type="checkbox" id="utilization-comments-checkbox-all" name="utilization-comments-checkbox-all" />
                               </th>
                               <th class="big-column">{{ _('Comments Body') }}</th>
                               <th class="medium-column">{{ _('Utilization Title') }}</th>
@@ -143,7 +143,7 @@
                     <div class="tab-contents" id="menu2">
                       {% block result_resource_comments_table %}
                         <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} 0</h4>
-                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
+                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="resource-comments-table">
                           <thead class="table-header">
                             <tr>
                               <th class="small-column">
