Remove download property of additional info

--- a/ckanext/feedback/templates/package/snippets/additional_info.html
+++ b/ckanext/feedback/templates/package/snippets/additional_info.html
@@ -4,7 +4,7 @@
   {% if h.is_enabled_downloads() %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Downloads') }}</th>
-      <td class="dataset-details" property="foaf:homepage">{{ h.get_package_downloads(pkg_dict.id) }}</td>
+      <td class="dataset-details">{{ h.get_package_downloads(pkg_dict.id) }}</td>
     </tr>
   {% endif %}
   <tr>
