--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -25,6 +25,17 @@
     {% block maintag %}<div class="main">{% endblock %}
       <div id="content" class="container">
         {% block main_content %}
+          {% block flash %}
+            <div class="flash-messages">
+              {% block flash_inner %}
+                {% for message in h.flash.pop_messages() | list %}
+                  <div class="alert fade in {{ message.category }}">
+                    {{ h.literal(message) }}
+                  </div>
+                {% endfor %}
+              {% endblock %}
+            </div>
+          {% endblock %}
 
           {% block toolbar %}
             <div class="toolbar" role="navigation" aria-label="{{ _('Breadcrumb') }}">
@@ -85,7 +96,10 @@
                     <input id="menu2" type="radio" name="tab-menu" value="resource-comments"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
                     <div class="tab-contents" id="menu1">
                       {% block result_utilization_comments_table %}
-                        <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} {{ utilization_comments|length }}</h4>
+                        <h4 class="bottom-centered-content" id="data-count">
+                          {{ _('Results: ') }}
+                          <span id="utilization-comments-results-count">{{ utilization_comments|length }}</span>
+                        </h4>
                         <span class="bottom-centered-content right-text">
                           <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comments')">{{ _('Bulk Appproval')}}</button>
                           <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comments')">{{ _('Bulk Delete')}}</button>
@@ -142,7 +156,10 @@
                     </div>
                     <div class="tab-contents" id="menu2">
                       {% block result_resource_comments_table %}
-                        <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} 0</h4>
+                        <h4 class="bottom-centered-content" id="data-count">
+                          {{ _('Results: ') }}
+                          <span id="resource-comments-results-count">0</span>
+                        </h4>
                         <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="resource-comments-table">
                           <thead class="table-header">
                             <tr>
