--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -1,219 +1,144 @@
 {% extends "page.html" %}
 
-{%- block page -%}
+{% block styles %}
+  {{ super() }}
+  {% asset 'feedback/feedback-management-comments-css' %}
+{% endblock %}
 
-  <!-- {% block skip %}
-    <div class="sr-only sr-only-focusable"><a href="#content">{{ _('Skip to content') }}</a></div>
-  {% endblock %} -->
+{% block breadcrumb_content %}
+  {{ super() }}
+  <li class="active"><a href="{{ h.url_for('management.comments') }}">{{ _('Management Comments') }}</a></li>
+{% endblock %}
 
-  {#
-  Override the header on a page by page basis by extending this block. If
-  making sitewide header changes it is preferable to override the header.html
-  file.
-  #}
-  {%- block header %}
-    {% include "header.html" %}
-  {% endblock -%}
 
-  {% block styles %}
-    {{ super() }}
-    {% asset 'feedback/feedback-management-comments-css' %}
-  {% endblock %}
-
-  {# The content block allows you to replace the content of the page if needed #}
-  {%- block content %}
-    {% block maintag %}<div class="main">{% endblock %}
-      <div id="content" class="container">
-        {% block main_content %}
-          {% block flash %}
-            <div class="flash-messages">
-              {% block flash_inner %}
-                {% for message in h.flash.pop_messages() | list %}
-                  <div class="alert fade in {{ message.category }}">
-                    {{ h.literal(message) }}
-                  </div>
-                {% endfor %}
-              {% endblock %}
-            </div>
+{% block primary %}
+  <article class="module">
+    <header class="module-content page-header">
+      <div class="top-centered-content">
+        {% if c.userobj.sysadmin %}
+          {% block select_categories %}
+            <span>
+              <h4>{{ _('Category') }}</h4>
+              {% for category in categories %}
+                <input type="checkbox" class="category-checkbox" id="{{ category.value }}" name="{{ category.value }}" onclick="refreshTable()" checked>
+                <label for="{{ category.value }}" class="normal-font-weight middle-vertical-aligned">{{ _(category.value) }}</label>
+              {% endfor %}
+            </span>
           {% endblock %}
-
-          {% block toolbar %}
-            <div class="toolbar" role="navigation" aria-label="{{ _('Breadcrumb') }}">
-              {% block breadcrumb %}
-                {% if self.breadcrumb_content() | trim %}
-                  <ol class="breadcrumb">
-                    {% snippet 'snippets/home_breadcrumb_item.html' %}
-                    {% block breadcrumb_content %}
-                      {{ super() }}
-                      <li class="active"><a href="{{ h.url_for('management.comments') }}">{{ _('Management Comments') }}</a></li>
-                    {% endblock %}
-                  </ol>
-                {% endif %}
-              {% endblock %}
-            </div>
+          {% block select_status %}
+            <span>
+              <h4>{{ _('Status') }}</h4>
+              <input type="checkbox" id="waiting" name="waiting" onclick="refreshTable()" checked>
+              <label for="waiting" class="normal-font-weight middle-vertical-aligned">{{ _('Waiting') }}</label>
+              <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="refreshTable()" checked>
+              <label for="approval" class="normal-font-weight middle-vertical-aligned">{{ _('Approved') }}</label>
+            </span>
           {% endblock %}
-
-          <div class="row wrapper{% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
-
-            {#
-            The pre_primary block can be used to add content to before the
-            rendering of the main content columns of the page.
-            #}
-            {% block pre_primary %}
-            {% endblock %}
-
-            {% block secondary %}
-
-            {% endblock %}
-
-            {% block primary %}
-              <div class="top-centered-content">
-                {% if c.userobj.sysadmin %}
-                  {% block select_categories %}
-                    <span>
-                      <h4>{{ _('Category') }}</h4>
-                      {% for category in categories %}
-                        <input type="checkbox" class="category-checkbox" id="{{ category.value }}" name="{{ category.value }}" onclick="refreshTable()" checked>
-                        <label for="{{ category.value }}" class="normal-font-weight middle-vertical-aligned">{{ _(category.value) }}</label>
-                      {% endfor %}
-                    </span>
-                  {% endblock %}
-                  {% block select_status %}
-                    <span>
-                      <h4>{{ _('Status') }}</h4>
-                      <input type="checkbox" id="waiting" name="waiting" onclick="refreshTable()" checked>
-                      <label for="waiting" class="normal-font-weight middle-vertical-aligned">{{ _('Waiting') }}</label>
-                      <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="refreshTable()" checked>
-                      <label for="approval" class="normal-font-weight middle-vertical-aligned">{{ _('Approved') }}</label>
-                    </span>
-                  {% endblock %}
-                {% endif %}
-              </div>
-              {% if c.userobj.sysadmin %}
-                <form id="comments-form" method="post">
-                  <div class="tab">
-                    <input id="menu1" type="radio" name="tab-menu" value="utilization-comments" checked><label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
-                    <input id="menu2" type="radio" name="tab-menu" value="resource-comments"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
-                    <div class="tab-contents" id="menu1">
-                      {% block result_utilization_comments_table %}
-                        <h4 class="bottom-centered-content" id="data-count">
-                          {{ _('Results: ') }}
-                          <span id="utilization-comments-results-count">{{ utilization_comments|length }}</span>
-                        </h4>
-                        <span class="bottom-centered-content right-text">
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comments')">{{ _('Bulk Appproval')}}</button>
-                          <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comments')">{{ _('Bulk Delete')}}</button>
-                        </span>
-                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="utilization-comments-table">
-                          <thead class="table-header">
-                            <tr>
-                              <th class="small-column">
-                                <input type="checkbox" id="utilization-comments-checkbox-all" name="utilization-comments-checkbox-all" />
-                              </th>
-                              <th class="big-column">{{ _('Comments Body') }}</th>
-                              <th class="medium-column">{{ _('Utilization Title') }}</th>
-                              <th class="medium-column">{{ _('Dataset') }}</th>
-                              <th class="medium-column">{{ _('Resource') }}</th>
-                              <th class="small-column">{{ _('Category') }}</th>
-                              <th class="small-column">{{ _('Created Date') }}</th>
-                              {% if c.userobj.sysadmin %}
-                                <th class="small-column">{{ _('Status') }}</th>
-                              {% endif %}
-                            </tr>
-                          </thead>
-                          <tbody>
-                            {% for row in utilization_comments %}
-                              <tr>
-                                <td class="small-column">
-                                  <input type="checkbox" id="utilization-comments-checkbox-{{ row.id }}" name="utilization-comments-checkbox" value="{{ row.id }}" />
-                                </td>
-                                <td class="left-aligned-text">
-                                  <a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.content }}</a>
-                                </td>
-                                <td>
-                                  <a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.utilization.title }}</a>
-                                </td>
-                                <td>
-                                  <a href="{{ url_for('dataset.search') }}{{ row.utilization.resource.package.title }}">{{ row.utilization.resource.package.title }}</a>
-                                </td>
-                                <td>
-                                  <a href="{{ h.url_for('dataset.search') }}{{ row.utilization.resource.package.title }}/resource/{{ row.utilization.resource.id }}">{{ row.utilization.resource.name }}</a>
-                                </td>
-                                <td>{{ row.category.value }}</td>
-                                <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                                {% if c.userobj.sysadmin %}
-                                  {% if row.approval == True %}
-                                    <td data-approval="true">{{ _('Approved') }}</td>
-                                  {% else %}
-                                    <td data-waiting="true">{{ _('Waiting') }}</td>
-                                  {% endif %}
-                                {% endif %}
-                              </tr>
-                            {% endfor %}
-                          </tbody>
-                        </table>
-                      {% endblock %}
-                    </div>
-                    <div class="tab-contents" id="menu2">
-                      {% block result_resource_comments_table %}
-                        <h4 class="bottom-centered-content" id="data-count">
-                          {{ _('Results: ') }}
-                          <span id="resource-comments-results-count">0</span>
-                        </h4>
-                        <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="resource-comments-table">
-                          <thead class="table-header">
-                            <tr>
-                              <th class="small-column">
-                                <input type="checkbox" id="comments-checkbox" name="comments-checkbox" />
-                              </th>
-                              <th class="big-column">{{ _('Comments Body') }}</th>
-                              <th class="medium-column">{{ _('Score') }}</th>
-                              <th class="medium-column">{{ _('Dataset') }}</th>
-                              <th class="medium-column">{{ _('Resource') }}</th>
-                              <th class="small-column">{{ _('Category') }}</th>
-                              <th class="small-column">{{ _('Created Date') }}</th>
-                              {% if c.userobj.sysadmin %}
-                                <th class="small-column">{{ _('Status') }}</th>
-                              {% endif %}
-                            </tr>
-                          </thead>
-                          <tbody>
-                          </tbody>
-                        </table>
-                      {% endblock %}
-                    </div>
-                  </div>
-                </form>
-              {% endif %}
-            {% endblock %}
-            {#
-            The primary_content block can be used to add content to the page.
-            This is the main block that is likely to be used within a template.
-
-            Example:
-
-              {% block primary_content %}
-                <h1>My page content</h1>
-                <p>Some content for the page</p>
-              {% endblock %}
-            #}
-            {% block primary_content %}
-            {% endblock %}
-          </div>
-        {% endblock %}
+        {% endif %}
       </div>
+    </header>
+    <div class="module-content">
+      {% if c.userobj.sysadmin %}
+        <form id="comments-form" method="post">
+          <div class="tab">
+            <input id="menu1" type="radio" name="tab-menu" value="utilization-comments" checked><label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
+            <input id="menu2" type="radio" name="tab-menu" value="resource-comments"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
+            <div class="tab-contents" id="menu1">
+              {% block result_utilization_comments_table %}
+                <h4 class="bottom-centered-content" id="data-count">
+                  {{ _('Results: ') }}
+                  <span id="utilization-comments-results-count">{{ utilization_comments|length }}</span>
+                </h4>
+                <span class="bottom-centered-content right-text">
+                  <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_utilization_comments')">{{ _('Bulk Appproval')}}</button>
+                  <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_utilization_comments')">{{ _('Bulk Delete')}}</button>
+                </span>
+                <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="utilization-comments-table">
+                  <thead class="table-header">
+                    <tr>
+                      <th class="small-column">
+                        <input type="checkbox" id="utilization-comments-checkbox-all" name="utilization-comments-checkbox-all" />
+                      </th>
+                      <th class="big-column">{{ _('Comments Body') }}</th>
+                      <th class="medium-column">{{ _('Utilization Title') }}</th>
+                      <th class="medium-column">{{ _('Dataset') }}</th>
+                      <th class="medium-column">{{ _('Resource') }}</th>
+                      <th class="small-column">{{ _('Category') }}</th>
+                      <th class="small-column">{{ _('Created Date') }}</th>
+                      {% if c.userobj.sysadmin %}
+                        <th class="small-column">{{ _('Status') }}</th>
+                      {% endif %}
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for row in utilization_comments %}
+                      <tr>
+                        <td class="small-column">
+                          <input type="checkbox" id="utilization-comments-checkbox-{{ row.id }}" name="utilization-comments-checkbox" value="{{ row.id }}" />
+                        </td>
+                        <td class="left-aligned-text">
+                          <a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.content }}</a>
+                        </td>
+                        <td>
+                          <a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.utilization.title }}</a>
+                        </td>
+                        <td>
+                          <a href="{{ url_for('dataset.search') }}{{ row.utilization.resource.package.title }}">{{ row.utilization.resource.package.title }}</a>
+                        </td>
+                        <td>
+                          <a href="{{ h.url_for('dataset.search') }}{{ row.utilization.resource.package.title }}/resource/{{ row.utilization.resource.id }}">{{ row.utilization.resource.name }}</a>
+                        </td>
+                        <td>{{ row.category.value }}</td>
+                        <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
+                        {% if c.userobj.sysadmin %}
+                          {% if row.approval == True %}
+                            <td data-approval="true">{{ _('Approved') }}</td>
+                          {% else %}
+                            <td data-waiting="true">{{ _('Waiting') }}</td>
+                          {% endif %}
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              {% endblock %}
+            </div>
+            <div class="tab-contents" id="menu2">
+              {% block result_resource_comments_table %}
+                <h4 class="bottom-centered-content" id="data-count">
+                  {{ _('Results: ') }}
+                  <span id="resource-comments-results-count">0</span>
+                </h4>
+                <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="resource-comments-table">
+                  <thead class="table-header">
+                    <tr>
+                      <th class="small-column">
+                        <input type="checkbox" id="comments-checkbox" name="comments-checkbox" />
+                      </th>
+                      <th class="big-column">{{ _('Comments Body') }}</th>
+                      <th class="medium-column">{{ _('Score') }}</th>
+                      <th class="medium-column">{{ _('Dataset') }}</th>
+                      <th class="medium-column">{{ _('Resource') }}</th>
+                      <th class="small-column">{{ _('Category') }}</th>
+                      <th class="small-column">{{ _('Created Date') }}</th>
+                      {% if c.userobj.sysadmin %}
+                        <th class="small-column">{{ _('Status') }}</th>
+                      {% endif %}
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+              {% endblock %}
+            </div>
+          </div>
+        </form>
+      {% endif %}
     </div>
-  {% endblock -%}
+  </article>
+{% endblock %}
 
-  {#
-  Override the footer on a page by page basis by extending this block. If
-  making sitewide header changes it is preferable to override the footer.html-u
-  file.
-  #}
-  {%- block footer %}
-    {% include "footer.html" %}
-  {% endblock -%}
-{%- endblock -%}
+{% block secondary %}{% endblock %}
 
 {%- block scripts %}
   {% asset 'base/main' %}
