--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -91,6 +91,7 @@
                     <thead class="table-header">
                       <tr>
                         <th class="big-column">{{ _('Title') }}</th>
+                        <th class="small-column">{{ _('Issue resolutions') }}</th>
                         <th class="big-column">{{ _('Dataset') }}</th>
                         <th class="medium-column">{{ _('Data resource') }}</th>
                         <th class="small-column">{{ _('Registration date') }}</th>
@@ -102,9 +103,16 @@
                     <tbody>
                       {% for row in utilizations %}
                         <tr>
-                          <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a>
-                            <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" class="spaced-left" width="28" height="28"/>
-                            <span class="spaced-left">{{ row.issue_resolution }}</span>
+                          <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a></td>
+                          <td>
+                            <div class="division-flex-outer">
+                              <div class="division-flex-inner-icon">
+                                {% if row.issue_resolution > 0 %}
+                                  <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
+                                {% endif %}
+                              </div>
+                              <div class="division-flex-inner-num">{{ row.issue_resolution }}</div>
+                            </div>
                           </td>
                           <td>{{ row.package_name }}</td>
                           <td>{{ row.resource_name }}</td>
