--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -100,11 +100,15 @@
           <form name="issue_resolution_form" class="top-centered-content" action="{{ url_for('utilization.create_issue_resolution', utilization_id=utilization_id ) }}" method="post">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h2 class="modal-title">{{ _('Issue resolution content') }}</h2>
+              <h2 class="modal-title">{{ _('Certification of issue resolution') }}</h2>
             </div>
             <div class="modal-body">
+              <div>
+                <p><small>{{ _('What is certification of issue resolution?') }}</small></p>
+                <p><small>{{ _('If it is determined that the content of the utilization method leads to the solution of the problem, it can be certified as a problem solution.') }}</small></p>
+              </div>
               <div class="form-group control-full">
-                <label class="control-label" for="code">{{ _('Input field') }}</label>
+                <label class="control-label" for="code">{{ _('Contents of issue resolution') }}</label>
                 <div class="controls">
                   <textarea id="description" name="description" cols="20" rows="3" placeholder="" class="form-control"></textarea>
                 </div>
