--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -6,6 +6,7 @@
     {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ h.get_translated(res, 'format') }}</span>
     {{ h.popular('views', res.tracking_summary.total, min=10) if res.tracking_summary }}
   </a>
+  <br>
   {% if h.is_enabled_downloads() %}
     <div class = "bubble">
       <i class="fa fa-arrow-circle-o-down"></i>
@@ -15,7 +16,8 @@
   {% endif %}
   {% if h.is_enabled_utilizations() %}
     <div class="bubble">
-      <i class="fa fa-pencil-square-o"></i><a href="{{ h.url_for('utilization.search', id=res.id, disable_keyword=true) }}">{{ h.get_resource_utilizations(res.id) }}</a>
+      <i class="fa fa-pencil-square-o"></i>
+      <a href="{{ h.url_for('utilization.search', id=res.id, disable_keyword=true) }}">{{ h.get_resource_utilizations(res.id) }}</a>
       <div class="description">{{ _('Utilizations') }}</div>
     </div>
     <div class="bubble">
