modify English words and its translation

--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -38,7 +38,7 @@
           <h4>{{ _('Utilization description') }}</h4>
           <p>{{ row.description }}</p>
           <hr>
-          <h4>{{ _('Issue resolutions') }}</h4>
+          <h4>{{ _('Issue Resolutions') }}</h4>
           <a href="#issue-resolution-detail" data-toggle="modal">
             {% if issue_resolutions|length > 0 %}
               <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28">
