Add management comments (#39)
* Add admin templates and views

* Change the header link

* Add tab menu

* Display categories to management commnets window

* Display utilization commnets to management comments

* Add link to utilization comments

* Fix typo and Display result count

* Add management_comments.js

* Implement to filter by checkbox

* Add bulk approval and delete button

* Add process of form

* Add bulk approval utilization comments service

* Add function of changing all checkbox

* Add flash message

* Rename comments.css to management-comments.css

* Format all code

* Refactor template in management comments

* Move bulk update and delete to services/management/comments.py

* Extract len function from _()

* Add refresh comments

* Fix to single quote

* Refactor js code

* Chack all checkbox when executing refreshTable

* Add comment to service/management/comments.py

* Display resouce comments to management comments

* Refresh table when calling onclick

* Add bulk action of resouce comment

* Keep the tab info

* Add condition when rows is empty

* Support refresh rating for management comments

* Remove to check admin from management comments template

* Remove unnecessary block from management comments template

* Checkout template utilization detail to HEAD of main

* Checkout assets css search  to HEAD of main

* Checkout utilization summary service  to HEAD of main

* Remove condition of displaying  header

* Add check_administrator to management controller

--- a/ckanext/feedback/templates/header.html
+++ b/ckanext/feedback/templates/header.html
@@ -94,8 +94,8 @@
             {% if h.is_enabled_utilizations() %}
               {% do menu_items.append(('utilization.search', _('Utilization'))) %}
             {% endif %}
-            {% if c.userobj.sysadmin and h.is_enabled_resources() %}
-              {% do menu_items.append(('home.about', _('Feedback Comments'))) %}
+            {% if c.userobj.sysadmin %}
+              {% do menu_items.append(('management.comments', _('Management Comments'))) %}
             {% endif %}
             {% do menu_items.append(('home.about', _('About'))) %}
             {% for item in menu_items %}
