rebase and modify po file and resource comment.html and utilization details.html

--- a/ckanext/feedback/templates/resource/comment.html
+++ b/ckanext/feedback/templates/resource/comment.html
@@ -58,7 +58,7 @@
               {% endif %}
               <br>
               <div class="form-actions">
-                <button class="btn btn-primary" onclick="return checkRatingAndCommentExists();">{{ _('Send comment') }}</button>
+                <button class="btn btn-primary" onclick="return checkRatingAndCommentExists();">{{ _('Send') }}</button>
               </div>
               <br>
               <br>
