--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -67,7 +67,7 @@
               <p id="content-error" class="alert alert-error" style="display: none;">{{ _('Please enter your comment') }}</p>
             </div>
             <br>
-            <button class="btn btn-primary right-aligned" onclick="return checkCommentExists();">{{ _('Send comment') }}</button>
+            <button class="btn btn-primary right-aligned" onclick="return checkCommentExists();">{{ _('Send') }}</button>
             <br>
             <br>
             <br>
