modify the po file and html

--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -63,7 +63,7 @@
                     <th class="medium-column">{{ _('Dataset') }}</th>
                     <th class="medium-column">{{ _('Resource') }}</th>
                     <th class="small-column">{{ _('Category') }}</th>
-                    <th class="small-column">{{ _('Created Date') }}</th>
+                    <th class="small-column">{{ _('Created') }}</th>
                     <th class="small-column">{{ _('Status') }}</th>
                   </tr>
                 </thead>
@@ -119,7 +119,7 @@
                     <th class="medium-column">{{ _('Dataset') }}</th>
                     <th class="medium-column">{{ _('Resource') }}</th>
                     <th class="small-column">{{ _('Category') }}</th>
-                    <th class="small-column">{{ _('Created Date') }}</th>
+                    <th class="small-column">{{ _('Created') }}</th>
                     <th class="small-column">{{ _('Status') }}</th>
                   </tr>
                 </thead>
