--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -52,7 +52,7 @@
             <th class="small-column">{{ _('Issue resolutions') }}</th>
             <th class="big-column">{{ _('Dataset') }}</th>
             <th class="medium-column">{{ _('Data resource') }}</th>
-            <th class="small-column">{{ _('Registration date') }}</th>
+            <th class="small-column">{{ _('Registered') }}</th>
             {% if c.userobj.sysadmin %}
               <th class="small-column">{{ _('Status') }}</th>
             {% endif %}
