Change to allow posting only a rating or only a comment

--- a/ckanext/feedback/templates/resource/comment.html
+++ b/ckanext/feedback/templates/resource/comment.html
@@ -91,21 +91,25 @@
                   {{ _(comment.category.value) }}
                 {% endif %}
               {% endfor %}
-              <span class="group-stars">
-                {% for i in range(comment.rating) %}
-                  <img class="rating-star" src="/images/rating_star.png" alt="rating star"/>
-                {% endfor %}
-                {% for i in range(5 - comment.rating) %}
-                  <img class="rating-star" src="/images/empty_rating_star.png" alt="empty rating star"/>
-                {% endfor %}
-              </span>
+              {% if comment.rating >= 1 and comment.rating <= 5 %}
+                <span class="group-stars">
+                  {% for i in range(comment.rating) %}
+                    <img class="rating-star" src="/images/rating_star.png" alt="rating star"/>
+                  {% endfor %}
+                  {% for i in range(5 - comment.rating) %}
+                    <img class="rating-star" src="/images/empty_rating_star.png" alt="empty rating star"/>
+                  {% endfor %}
+                </span>
+              {% endif %}
               {% if not comment.approval %}
                 {{ _('Unapproved') }}
               {% endif %}
             </h4>
-            <div class="comment-content {{'unapproved' if not comment.approval }}">
-              <p>{{ comment.content }}</p>
-            </div>
+            {% if comment.content %}
+              <div class="comment-content {{'unapproved' if not comment.approval }}">
+                <p>{{ comment.content }}</p>
+              </div>
+            {% endif %}
             {% if reply %}
               <hr>
               <h4 class="reply">{{ reply.created.strftime('%Y/%m/%d %H:%M') }}</h4>
